@@ -5,7 +5,9 @@
     fix HAL build #576; fix older GTK2 build
     Menu and Shift+F10 show side pane menus #575
     Design Menu shown with Menu key in addition to F2 #575
-    make keypress or click in dir tree not focus file list #541 #575
+    dir tree allow keyboard navigation, keep focus #541 #575
+    dir tree double-click expands/collapses row #542 #575
+    dir tree context menu|New|Tab Here opens selected dir
 1.0.3   2015-08-26:
     add Devices|Settings|Auto-Mount|Mount Dirs option #548
     proto hand keep %a for lxterminal urxvtc konsole gnome-terminal #552
